force-app/main/default/objects/Log__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <label>Connection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>