force-app/main/default/objects/Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>