force-app/main/default/objects/Log__c/fields/Exception_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type_Name__c</fullName>
    <label>Exception Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>