force-app/main/default/objects/Log__c/fields/External_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Object_Id__c</fullName>
    <label>External Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>