force-app/main/default/objects/Log__c/fields/External_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Object_Type__c</fullName>
    <label>External Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>