force-app/main/default/objects/Log__c/fields/External_Webservice_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Webservice_Name__c</fullName>
    <label>External Webservice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>