force-app/main/default/objects/Log__c/fields/Original_Log__c.field-meta.xml
<CustomField>
    <fullName>Original_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Reprocessed</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>