force-app/main/default/objects/Log__c/fields/Result_Header__c.field-meta.xml
<CustomField>
    <fullName>Result_Header__c</fullName>
    <label>Result Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>