force-app/main/default/objects/Log__c/fields/Result_Message__c.field-meta.xml
<CustomField>
    <fullName>Result_Message__c</fullName>
    <label>Result Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>