force-app/main/default/objects/Log__c/fields/Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Result_Status__c</fullName>
    <label>Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>