force-app/main/default/objects/Log__c/fields/Salesforce_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Id__c</fullName>
    <label>Salesforce Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>