force-app/main/default/objects/Log__c/fields/Salesforce_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Type__c</fullName>
    <label>Salesforce Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>