force-app/main/default/objects/Log__c/fields/Webservice_Name__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Name__c</fullName>
    <label>Webservice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>