force-app/main/default/objects/Log__c/recordTypes/Integration.recordType-meta.xml
<RecordType>
    <fullName>Integration</fullName>
    <active>true</active>
    <label>Integration</label>
</RecordType>