force-app/main/default/objects/Log__c/listViews/Standard_Log.listView-meta.xml
<ListView>
    <fullName>Standard_Log</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Result_Message__c</columns>
    <columns>Log_Details__c</columns>
    <columns>Exception_Type_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Standard Log</label>
    <language>en_US</language>
</ListView>